# stone-cli

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  install-dependencies.sh  rust-toolchain
.cargo/: config.toml
.github/workflows/: develop.yml  main.yml  stone_prover_build.yml  stone_prover_build_artifact.yml  stone_prover_build_artifact_ubuntu_20.04.yml
configs/: env.json
examples/: dict_with_struct.cairo
examples/cairo0/: abs_value_array.json  array_sum.json  assert_250_bit_element_array.json  assert_le_felt_hint.json  assert_le_felt_old.json  assert_lt_felt.json  assert_nn.json  assert_not_zero.json  big_struct.json  bigint.json  bitand_hint.json  bitwise_builtin_test.json  bitwise_output.json  bitwise_recursion.json  blake2s_felts.json  blake2s_hello_world_hash.json  blake2s_integration_tests.json  call_function_assign_param_by_name.json  chained_ec_op.json  common_signature.json  compare_arrays.json  compare_different_arrays.json  compare_greater_array.json  compare_lesser_array.json  compute_doubling_slope_v2.json  compute_slope_v2.json  dict.json  dict_integration_tests.json  dict_squash.json  dict_store_cast_ptr.json  dict_update.json  div_mod_n.json  ec_double_assign_new_x_v3.json  ec_double_slope.json  ec_double_v4.json  ec_negate.json  ec_op.json  ec_recover.json  ed25519_ec.json  ed25519_field.json  (+106 more)
examples/cairo0/with_hint/: fibonacci.json  keccak.cairo  keccak.json
examples/with_input/: array_input_sum_input.txt  array_length_input.txt  dict_with_input_input.txt  tensor_input.txt
src/: args.rs  bootloader.rs  build.rs  cairo.rs  cairo1.rs  fri.rs  lib.rs  main.rs  prover.rs  resources.rs  serialize.rs  setup.rs  sharp-server.crt  sharp.rs  starknet.rs  utils.rs  verifier.rs
src/cairo1/: args.rs  error.rs
src/prover/: config.rs  settings.rs
src/serialize/: vec252.rs
src/starknet/: args.rs  vec252.rs
tests/: test_cli.rs  test_command.rs  test_run.rs
tests/cli/: tests.sh
tests/cli/resources/macos-testing-proofs/: bootloader_proof.json  cairo0_fibonacci_recursive_builtins_stone5_keccak_160_lsb.json  fact_topologies.json
tests/configs/: cpu_air_params.json
tests/resources/: bootloader_proof_serialized.json
tests/resources/integrity-programs/: cairo0_fibonacci_recursive_builtins.cairo  cairo0_fibonacci_recursive_builtins.json
tests/resources/proofs/ethereum/layouts/starknet/: bootloader_proof.json  bootloader_proof_serialized.json  bootloader_proof_v5.json  bootloader_proof_v5_serialized.json  bootloader_proof_v6.json
tests/resources/proofs/macos-testing/: fibonacci_cairo0_stone_v5_proof.json  fibonacci_cairo0_stone_v6_proof.json  fibonacci_cairo1_stone_v5_proof.json  fibonacci_cairo1_stone_v6_proof.json
tests/resources/proofs/starknet/layouts/starknet/serialized/: initial  step3
tests/resources/proofs/starknet/monolith/: serialized
tests/resources/proofs/starknet/split/layouts/starknet/serialized/: final  initial  step1  step2  step4
