[package]
name = "stone-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
cairo-bootloader = { git = "https://github.com/zksecurity/cairo-bootloader", rev = "91e8121221140317f0f4d6ba7a59b16ec7ff2d7d" }
cairo-felt = "0.9.1"
cairo1-run = { git = "https://github.com/zksecurity/cairo-vm", package = "cairo1-run", features = ["mod_builtin"], rev = "ac8b81b79f65f5017fe0929bf4025be4a0e9c73c" }
cairo-vm = { git = "https://github.com/zksecurity/cairo-vm", features = [
    "extensive_hints"
], rev = "ac8b81b79f65f5017fe0929bf4025be4a0e9c73c" }
cairo-lang-compiler = { version = "=2.10.0-rc.0", default-features = false }
clap = { version = "4.3.10", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rstest = "0.21.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
stark_evm_adapter = { git = "https://github.com/zksecurity/stark-evm-adapter.git", rev = "e044116e3cf4e3cbca11cce7b9e508a0f3e6870b" }
swiftness_air = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_fri = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_proof_parser = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_stark = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
starknet-crypto = "0.7.2"
tempfile = "3.10.1"
thiserror = "1.0.61"


#  reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "28d25bd0a6437cdd8dbec22619f2675b7f97d172", features = [
#    "json",
#    "blocking",
#    "rustls-tls",
#  ] }
uuid = "1.9.1"
log = "0.4.25"
rpassword = "7.3.1"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.1"
pkcs8 = { version = "0.10.2", features = [
    "encryption",
    "3des",
    "des-insecure",
    "pem",
    "alloc",
    "pkcs5",
] }
rustls = "0.23.21"
curl = "0.4.47"

[build-dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
flate2 = "1.0.30"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
sha256 = "1.5.0"
tar = "0.4.41"
tempfile = "3.10.1"
thiserror = "1.0.61"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
