[package]
name = "stone-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
cairo-bootloader = { git = "https://github.com/zksecurity/cairo-bootloader", rev = "ca1435a6cf52c7cea6d98e1c4edecff8424b4bae" }
cairo-felt = "0.9.1"
cairo-vm = { git = "https://github.com/zksecurity/cairo-vm", features = [
    "extensive_hints",
], rev = "3cfcd1d035a4f6951337e6f4cc26014a0aa7e47e" }
clap = { version = "4.3.10", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rstest = "0.21.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
stark_evm_adapter = { git = "https://github.com/zksecurity/stark-evm-adapter.git", rev = "e044116e3cf4e3cbca11cce7b9e508a0f3e6870b" }
swiftness_air = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_fri = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_proof_parser = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness_stark = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
swiftness = { git = "https://github.com/zksecurity/integrity-calldata-generator", rev = "6f2dd268274e40e5ea75e2f17aff6b8e53f8f499" }
starknet-crypto = "0.7.2"
tempfile = "3.10.1"
thiserror = "1.0.61"
uuid = "1.9.1"
tar = "0.4.41"
flate2 = "1.0.30"
fs2 = "0.4.3"

[build-dependencies]
tar = "0.4.41"
flate2 = "1.0.30"
once_cell = "1.18"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
sha2 = "0.10.8"
tempfile = "3.10.1"
thiserror = "1.0.61"
anyhow = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
